# TranscriptSpeakerRenamer

./: main.py  pyproject.toml
